add jupyter notebook for training

--- a/features/issue_generation/model/Llama_3_FineTuning.ipynb
+++ b/features/issue_generation/model/Llama_3_FineTuning.ipynb
@@ -28,7 +28,7 @@
         }
       ],
       "source": [
-        "# requierments\n",
+        "# requirements\n",
         "!pip install -q -U \\\n",
         "    transformers==4.56.2 \\\n",
         "    datasets==4.1.1 \\\n",
